github/workflows/compile: add secure variants

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -20,9 +20,13 @@ jobs:
           stm32f7xx,
           stm32f7xx_ram,
           stm32h7xx,
+          stm32h7xx secure=true,
           stm32h7xx_ram,
+          stm32h7xx_ram secure=true,
           matek_H7_slim,
+          matek_H7_slim secure=true,
           matek_H7_slim_ram,
+          matek_H7_slim_ram secure=true,
           pixhawk4,
           pixhawk4_ram
           ]
