--- a/Makefile.stm32h7xx
+++ b/Makefile.stm32h7xx
@@ -52,11 +52,21 @@ MCU = $(CPU) -mthumb $(FPU) $(FLOAT-ABI)
 AS_DEFS = 
 
 # C defines
-C_DEFS =  \
+C_DEFS = \
 -DUSE_HAL_DRIVER \
--DSTM32H7xx \
--DSTM32H750xx \
--DSTM32H743xx
+-DSTM32H7xx
+
+ifeq ($(BOARD), NUCLEO_H755ZI)
+  C_DEFS += \
+  -DCORE_CM7 \
+  -DSTM32H755xx
+else ifeq ($(BOARD), MATEK_H743_SLIM)
+  C_DEFS += \
+  -DSTM32H743xx
+else
+  C_DEFS += \
+  -DSTM32H750xx
+endif
 
 # AS includes
 AS_INCLUDES = 
