--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,14 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     
     container:
-      image: px4io/px4-dev-nuttx-focal:2021-09-08
+      image: igormisic/improject:v1.0.2
       options: --privileged --ulimit core=-1 --security-opt seccomp=unconfined
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-      
+
+    - name: Mark repository as safe
+      run: git config --global --add safe.directory $GITHUB_WORKSPACE
+
     - name: Check format
       run: make check_format
 
