--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -36,7 +36,7 @@ jobs:
           ]
           
     container:       
-      image: px4io/px4-dev-nuttx-focal:2021-09-08
+      image: igormisic/improject:v1.0.2
       options: --privileged --ulimit core=-1 --security-opt seccomp=unconfined
     steps:
     - uses: actions/checkout@v2
